--- a/scss/custom-general.scss
+++ b/scss/custom-general.scss
@@ -357,8 +357,15 @@ footer {
     #logofolio {
         font-size: 3rem !important;
     }
+    #nav{
+        height: 65px !important;
+    }
     .nav-container {
         width: 100%;
+        height: 65px;
+        &.is-fixed-top{
+            height: 65px;
+        }
     }
     #nav-logo {
         transition: width .5s ease;
@@ -376,6 +383,10 @@ footer {
     .navbar-menu {
         z-index: 20;
         margin-left: -15px;
+    }
+    .button.is-danger.is-hoverable{
+        background: #ce242b;
+        color: white;
     }
     .main-content {
         max-width: 90vw !important;
